--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,7 +4,7 @@ services:
     build: .
     container_name: drf_app
     env_file:
-      - .env.dev
+      - .env.prod
     volumes:
       - .:/app
     command: "python manage.py runserver 0.0.0.0:8000"
@@ -17,7 +17,7 @@ services:
     image: postgres:17
     container_name: postgres_db
     env_file:
-      - .env.dev
+      - .env.prod
     volumes:
       - postgres_data:/var/lib/postgresql/data
     ports:
