configure media setting

--- a/nginx.conf
+++ b/nginx.conf
@@ -18,6 +18,9 @@ http {
             expires 30d;
             add_header Cache-Control "public, immutable";
         }
+        location /media/ {
+            alias /app/media/;
+        }
 
         location / {
             proxy_pass http://django;
