--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,7 +2,7 @@ version: "3.9"
 services:
   web:
     build: .
-    container_name: drf_app
+    container_name: drf-app
     env_file:
       - .env
     volumes:
@@ -12,6 +12,7 @@ services:
     depends_on:
       - db
       - redis
+    entrypoint: /app/entrypoint.sh
     expose:
       - "8000"
   db:
@@ -25,7 +26,7 @@ services:
       - "5432:5432"
   redis:
     image: redis:7.2-alpine
-    container_name: redis_app
+    container_name: redis
     restart: always
   celery:
     container_name: celery
@@ -47,7 +48,7 @@ services:
       - db
   nginx:
     image: nginx:alpine
-    container_name: "nginx"
+    container_name: nginx
     ports:
       - "80:80"
     volumes:
